Fixed extra spacing in phone size screen and other

--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,11 @@ img {
   justify-content: center;
   margin-top: 2rem;
 }
+@media screen and (max-width:800px) {
+  .info{
+    margin-top: -0.5rem;
+  }
+}
 .container {
   text-align: center;
   display: grid;
@@ -222,6 +227,11 @@ img {
   border-radius: 23px;
   justify-content: space-around;
   /* grid-template-columns: repeat(auto-fit, minmax(calc(100% / var(--columns) - 20px), 1fr)); */
+}
+@media screen and (max-width:800px) {
+  .sub-grid-container{
+    justify-content: space-evenly;
+  }
 }
 
 .grid-item {
@@ -461,5 +471,25 @@ h2 {
   }
   .important-footer {
     display: none;
+  }
+}
+@media screen and (max-width:800px) {
+  .container{
+    position: relative;
+    bottom: -40px;
+  }
+}
+
+@media screen and (max-width:800px){
+  .contact-us{
+    position: relative;
+    bottom: -15px;
+  }
+}
+@media screen and (max-width:800px){
+  #team{
+    position:relative;
+    bottom: -20px;
+    padding: 25px;
   }
 }
